Fix image spacing on about page.
Former-commit-id: 25ff273aa69931abdbdb0bcd05a9174bb1cb96a2

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -264,7 +264,9 @@ height: 100%;
 float: left;
 object-fit: cover;
 box-sizing:border-box;
-padding: $img_spacing;
+margin: $img_spacing - 5;
+padding: 5px;
+border-radius: 15px;
 }
 .right{
 float: right;
